--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "react-dom": "^17.0.2"
     },
     "devDependencies": {
+        "@commitlint/cli": "^17.4.4",
+        "@commitlint/config-conventional": "^17.4.4",
         "@docusaurus/module-type-aliases": "2.3.1",
         "@tsconfig/docusaurus": "^1.0.5",
         "@typescript-eslint/eslint-plugin": "^5.55.0",
