chore: update arclix config to latest version

--- a/arclix.config.json
+++ b/arclix.config.json
@@ -1,9 +1,14 @@
 {
-    "generate": {
-        "flat": false,
-        "addIndex": false,
-        "skipTest": true,
-        "scopeStyle": true,
-        "defaultPath": "./src/components/"
+    "component": {
+        "default": {
+            "cssPreprocessor": "css",
+            "usesTypeScript": false,
+            "scopeStyle": true,
+            "addStory": false,
+            "addIndex": false,
+            "addTest": false,
+            "flat": false,
+            "path": "src/components"
+        }
     }
 }
